--- a/KBFinder/res/menu/main.xml
+++ b/KBFinder/res/menu/main.xml
@@ -2,8 +2,14 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context="es.carlosrolindez.kbfinder.MainActivity" >
 	<item
+        android:id="@+id/bt_scan"
+        android:icon="@drawable/ic_action_search"
+        android:showAsAction="always"
+        android:title="@string/button_scan"/>
+	<item
 		android:id="@+id/action_settings"
 		android:orderInCategory="100"
 		android:showAsAction="never"
 		android:title="@string/action_settings"/>
+	
 </menu>
