keep list of devices

--- a/KBFinder/res/layout/device_list_row.xml
+++ b/KBFinder/res/layout/device_list_row.xml
@@ -17,7 +17,7 @@
 		android:layout_toRightOf="@id/device_type"
 		android:gravity="center_vertical|center_horizontal"
 		android:paddingLeft="5dip"
-		android:text="KINGBT-0034"
+		android:text=""
 		android:textColor="#040404"
 		android:textSize="18sp"
 		android:textStyle="bold"
@@ -31,7 +31,7 @@
     	android:layout_toRightOf="@id/device_type"
     	android:gravity="center_vertical|center_horizontal"
     	android:paddingLeft="5dip"
-    	android:text="FF:EE:DD:CC:BB:AA:88:77"
+    	android:text=""
     	android:textColor="#040404"
     	android:textSize="12sp"
     	android:textStyle="normal"
