--- a/KBFinder/res/menu/main.xml
+++ b/KBFinder/res/menu/main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/bt_scan"
         android:icon="@drawable/ic_action_search"
         android:showAsAction="always"
-        android:title="@string/button_scan"/>
+        android:title=""/>
 	<item
 		android:id="@+id/action_settings"
 		android:orderInCategory="100"
