--- a/KBFinder/res/layout/device_list_row.xml
+++ b/KBFinder/res/layout/device_list_row.xml
@@ -2,70 +2,100 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:descendantFocusability="blocksDescendants"
-	android:background="@drawable/notconnected_selector" >
-    <ImageView
-        android:id="@+id/device_type"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_width="120dp" 
-        android:layout_height="64dp" /> 
-	<TextView
-		android:id="@+id/device_name"
-		android:layout_width="180dp"
-		android:layout_height="32dp"
-		android:layout_alignParentTop="true"
-		android:layout_toRightOf="@id/device_type"
-		android:gravity="center_vertical|center_horizontal"
-		android:paddingLeft="5dp"
-		android:text="asdafsdf"
-		android:textColor="#040404"
-		android:textSize="18sp"
-		android:textStyle="bold"
-		android:typeface="sans" />
-    <TextView
-    	android:id="@+id/device_mac"
-    	android:layout_width="180dp"
-    	android:layout_height="32dp"
-		android:layout_below="@id/device_name"
-    	android:layout_toRightOf="@id/device_type"
-    	android:gravity="center_vertical|center_horizontal"
-    	android:paddingLeft="5dp"
-    	android:text="asdfasdf"
-    	android:textColor="#040404"
-    	android:textSize="12sp"
-    	android:textStyle="normal"
-    	android:typeface="sans" />
-	<ImageButton
-		android:id="@+id/play_pause"
-		android:layout_width="48dp"
-		android:layout_height="48dp"
-		android:layout_below="@id/device_type"
-		android:layout_centerHorizontal="true"
-		android:layout_marginTop="10dp"	
-		android:layout_marginLeft="1dp"
-		android:layout_marginRight="1dp"
-		android:layout_marginBottom="10dp"		
-		android:background="@drawable/play_pause_selector" 
-		android:visibility="gone" />
-   	<ImageButton
-        android:id="@+id/previous"
-		android:layout_below="@id/device_type"
-		android:layout_toLeftOf="@id/play_pause"
-		android:layout_marginTop="10dp"	
-        android:layout_width="48dp" 
-        android:layout_height="48dp" 
-		android:layout_marginBottom="10dp"		
-        android:background="@drawable/previous_selector" 
-		android:visibility="gone" /> 
-	<ImageButton
-		android:id="@+id/next"
-		android:layout_width="48dp"
-		android:layout_height="48dp"
-		android:layout_below="@id/device_type"
-		android:layout_toRightOf="@id/play_pause"
-		android:layout_marginTop="10dp"	
-		android:layout_marginBottom="10dp"		
-		android:background="@drawable/next_selector"  
-		android:visibility="gone" />
-</RelativeLayout>
+    android:background="#ffebeff1"
+    android:orientation="horizontal" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:padding="8dp"
+        android:background="#ff558b2f"
+        android:id="@+id/back_layout"
+        android:orientation="horizontal" >       
+	    <TextView
+	    	android:id="@+id/back_text"
+	    	android:layout_width="wrap_content"
+	    	android:layout_height="32dp"
+	    	android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+	    	android:text="ñljñlkj"
+	    	android:textColor="#040404"
+	    	android:textSize="24sp"
+	    	android:textStyle="bold"
+	    	android:typeface="sans" />
+    </RelativeLayout>    
+	
+    <RelativeLayout
+    	android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+		android:descendantFocusability="blocksDescendants"        
+        android:background="@drawable/notconnected_selector"
+        android:id="@+id/main_layout"
+        android:orientation="horizontal" > 
+		<ImageView
+			android:id="@+id/device_type"
+			android:layout_width="120dp"
+			android:layout_height="64dp"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentTop="true" />
+		<TextView
+			android:id="@+id/device_name"
+			android:layout_width="180dp"
+			android:layout_height="32dp"
+			android:layout_alignParentTop="true"
+			android:layout_toRightOf="@id/device_type"
+			android:gravity="center_vertical|center_horizontal"
+			android:paddingLeft="5dp"
+			android:text="asdafsdf"
+			android:textColor="#040404"
+			android:textSize="18sp"
+			android:textStyle="bold"
+			android:typeface="sans" />
+	    <TextView
+	    	android:id="@+id/device_mac"
+	    	android:layout_width="180dp"
+	    	android:layout_height="32dp"
+			android:layout_below="@id/device_name"
+	    	android:layout_toRightOf="@id/device_type"
+	    	android:gravity="center_vertical|center_horizontal"
+	    	android:paddingLeft="5dp"
+	    	android:text="asdfasdf"
+	    	android:textColor="#040404"
+	    	android:textSize="12sp"
+	    	android:textStyle="normal"
+	    	android:typeface="sans" />
+		<ImageButton
+			android:id="@+id/play_pause"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_below="@id/device_type"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="10dp"	
+			android:layout_marginLeft="1dp"
+			android:layout_marginRight="1dp"
+			android:layout_marginBottom="10dp"		
+			android:background="@drawable/play_pause_selector" 
+			android:visibility="gone" />
+	   	<ImageButton
+	        android:id="@+id/previous"
+			android:layout_below="@id/device_type"
+			android:layout_toLeftOf="@id/play_pause"
+			android:layout_marginTop="10dp"	
+	        android:layout_width="48dp" 
+	        android:layout_height="48dp" 
+			android:layout_marginBottom="10dp"		
+	        android:background="@drawable/previous_selector" 
+			android:visibility="gone" /> 
+		<ImageButton
+			android:id="@+id/next"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_below="@id/device_type"
+			android:layout_toRightOf="@id/play_pause"
+			android:layout_marginTop="10dp"	
+			android:layout_marginBottom="10dp"		
+			android:background="@drawable/next_selector"  
+			android:visibility="gone" />
+
+	</RelativeLayout>
+</RelativeLayout>  
