--- a/KBFinder/res/layout/device_list_row.xml
+++ b/KBFinder/res/layout/device_list_row.xml
@@ -102,6 +102,8 @@
 			android:layout_height="64dp"
 			android:layout_below="@id/device_type"
 			android:layout_centerHorizontal="true"
+			android:layout_marginTop="10dp"	
+			android:layout_marginBottom="10dp"					
 			android:background="@drawable/app_selector"
 			android:visibility="gone" />
 	</RelativeLayout>
