--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -8,9 +8,38 @@
 	android:paddingTop="@dimen/activity_vertical_margin"
 	tools:context="es.carlosrolindez.kbfinder.KBfinderActivity"
 	android:background="@drawable/grill">
+    <RelativeLayout
+    	android:id="@+id/SplashLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ff000000"
+        android:orientation="horizontal" >       
+		<ImageView
+	 		android:id="@+id/SplashImageView"
+	 		android:layout_width="150dp"
+	 		android:layout_height="150dp"
+	 		android:layout_centerHorizontal="true"
+	 		android:layout_centerVertical="true" />
+	</RelativeLayout>    
+    <RelativeLayout
+    	android:id="@+id/ControlLoyaut"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ff000000"
+        android:visibility="invisible" >
+ 		 <ImageButton
+ 			android:id="@+id/AuxPower"
+ 			android:layout_width="48dp"
+ 			android:layout_height="48dp"
+ 			android:layout_alignParentRight="true"
+ 			android:layout_alignParentTop="true"
+ 			android:background="@drawable/ic_launcher" />
 		<ImageButton
-			android:id="@+id/all"
-			android:layout_width="64dp"
-			android:layout_height="64dp"	
-			android:background="@drawable/play_pause_selector" />		
-</RelativeLayout>
+			android:id="@+id/MainPower"
+			android:layout_width="48dp"
+			android:layout_height="48dp"
+			android:layout_alignParentTop="true"
+			android:layout_toLeftOf="@+id/AuxPower"
+			android:background="@drawable/ic_launcher" />
+	</RelativeLayout>        
+</RelativeLayout>  
