--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -37,6 +37,7 @@
 				android:layout_width="48dp"
 				android:layout_height="48dp"
 				android:layout_margin="10dp"
+				android:layout_marginRight="13dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentRight="true"
 				android:background="@drawable/ic_launcher" />
