--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -48,14 +48,13 @@
 				android:layout_margin="10dp"
 				android:layout_alignParentBottom="true"
 				android:background="@drawable/ic_launcher" />
-			<RelativeLayout
-				android:id="@+id/sourceLayout"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_above="@+id/volumeControl"
-				android:layout_below="@+id/MainPower"
-				android:background="@drawable/windows" >
-			</RelativeLayout>        		
+			<android.support.v4.view.ViewPager
+    			xmlns:android="http://schemas.android.com/apk/res/android"
+    			android:id="@+id/pager"
+    			android:layout_width="match_parent"
+    			android:layout_height="match_parent" 
+    			android:layout_above="@+id/volumeControl"
+				android:layout_below="@+id/MainPower"/>      		
 		</RelativeLayout>        
 	</RelativeLayout>        
 </RelativeLayout>  
