--- a/KBFinder/res/drawable/app_selector.xml
+++ b/KBFinder/res/drawable/app_selector.xml
@@ -3,12 +3,12 @@
     <item
         android:state_selected="false"
         android:state_pressed="false"
-        android:drawable="@drawable/app_released_r" />
+        android:drawable="@drawable/app_released" />
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/app_pressed_r" />
+        android:drawable="@drawable/app_pressed" />
     <item
         android:state_selected="true"
         android:state_pressed="false"
-        android:drawable="@drawable/app_pressed_r" />
+        android:drawable="@drawable/app_pressed" />
 </selector>
