--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -2,12 +2,12 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@drawable/grill"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	tools:context="es.carlosrolindez.kbfinder.KBfinderActivity"
-	android:background="@drawable/grill">
+	tools:context="es.carlosrolindez.kbfinder.KBfinderActivity" >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"  
@@ -41,20 +41,20 @@
 				android:layout_alignParentTop="true"
 				android:layout_alignParentRight="true"
 				android:background="@drawable/power_on_selector" />
-			<ImageButton
+			<SeekBar
 				android:id="@+id/volumeControl"
 				android:layout_width="match_parent"
-				android:layout_height="48dp"
+				android:layout_height="wrap_content"
 				android:layout_margin="10dp"
-				android:layout_alignParentBottom="true"
-				android:background="@drawable/ic_launcher" />
+				android:layout_alignParentBottom="true" />
 			<android.support.v4.view.ViewPager
     			xmlns:android="http://schemas.android.com/apk/res/android"
     			android:id="@+id/pager"
     			android:layout_width="match_parent"
     			android:layout_height="match_parent" 
     			android:layout_above="@+id/volumeControl"
-				android:layout_below="@+id/MainPower"/>      		
+				android:layout_below="@+id/MainPower"/>
+
 		</RelativeLayout>        
 	</RelativeLayout>        
 </RelativeLayout>  
