--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -45,8 +45,11 @@
 				android:id="@+id/volumeControl"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_margin="10dp"
-				android:layout_alignParentBottom="true" />
+				android:layout_margin="20dp"
+				android:max="15"
+				android:layout_alignParentBottom="true" 
+				android:progressDrawable="@drawable/volume_progress_seekbar"
+        		android:thumb="@drawable/thumb" />
 			<android.support.v4.view.ViewPager
     			xmlns:android="http://schemas.android.com/apk/res/android"
     			android:id="@+id/pager"
