--- a/KBFinder/res/layout/bt_fragment.xml
+++ b/KBFinder/res/layout/bt_fragment.xml
@@ -15,12 +15,14 @@
 		android:layout_width="64dp"
 		android:layout_height="64dp"
 		android:layout_centerHorizontal="true"
+		android:layout_centerVertical="true"
 		android:layout_marginTop="10dp"	
 		android:layout_marginBottom="10dp"		
 		android:background="@drawable/play_pause_selector"  />		
    	<ImageButton
         android:id="@+id/previous_BT"
 		android:layout_toLeftOf="@id/play_pause_BT"
+		android:layout_centerVertical="true"
 		android:layout_marginTop="10dp"	
         android:layout_width="64dp" 
         android:layout_height="64dp" 
@@ -31,6 +33,7 @@
 		android:layout_width="64dp"
 		android:layout_height="64dp"
 		android:layout_toRightOf="@id/play_pause_BT"
+		android:layout_centerVertical="true"		
 		android:layout_marginTop="10dp"	
 		android:layout_marginBottom="10dp"		
 		android:background="@drawable/next_selector" />
