--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -15,9 +15,9 @@
         android:background="@drawable/windows" >       
 		<RelativeLayout
 	    	android:id="@+id/SplashLayout"
+	    	android:padding="3dp"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:background="@drawable/window_gradient"
 	        android:orientation="horizontal" >       
 			<ImageView
 		 		android:id="@+id/SplashImageView"
@@ -30,23 +30,23 @@
 	    	android:id="@+id/ControlLoyaut"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:background="@drawable/window_gradient"
 	        android:visibility="invisible" >
 			<TextView
 				android:id="@+id/SelectBtName"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_margin="10dp"
-				android:layout_marginLeft="13dp"
+				android:layout_margin="20dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentLeft="true" 
-				android:text="HOLA" />
+				android:text="" 
+				android:typeface="monospace"
+				android:textSize="40sp"
+        		android:textStyle="bold" />
 			<ImageButton
 				android:id="@+id/MainPower"
 				android:layout_width="64dp"
 				android:layout_height="64dp"
-				android:layout_margin="10dp"
-				android:layout_marginRight="13dp"
+				android:layout_margin="15dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentRight="true"
 				android:background="@drawable/power_on_selector" />
@@ -59,14 +59,21 @@
 				android:layout_alignParentBottom="true" 
 				android:progressDrawable="@drawable/volume_progress_seekbar"
         		android:thumb="@drawable/thumb" />
-			<android.support.v4.view.ViewPager
-    			xmlns:android="http://schemas.android.com/apk/res/android"
-    			android:id="@+id/pager"
-    			android:layout_width="match_parent"
-    			android:layout_height="match_parent" 
-    			android:layout_above="@+id/volumeControl"
-				android:layout_below="@+id/MainPower"/>
-
+			<RelativeLayout
+	       	 	android:layout_width="match_parent"
+	        	android:layout_height="match_parent"
+	        	android:layout_margin="20dp"
+	        	android:layout_above="@+id/volumeControl"
+				android:layout_below="@+id/MainPower"
+	        	android:background="@drawable/windows" >
+				<android.support.v4.view.ViewPager
+		   			xmlns:android="http://schemas.android.com/apk/res/android"
+		   			android:id="@+id/pager"
+		   			android:layout_width="match_parent"
+		   			android:layout_height="match_parent" 
+		   			android:layout_margin="3dp" 
+		   			android:background="@drawable/grill" />
+			</RelativeLayout>    
 		</RelativeLayout>        
 	</RelativeLayout>        
 </RelativeLayout>  
