--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -2,12 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/fragment"
    	android:layout_width="match_parent" 
-	android:layout_height="match_parent" >
+	android:layout_height="match_parent" 
+	android:padding="3dp">
     <TextView style="?android:textAppearanceMedium"
     	android:id="@+id/fragment_text"
         android:padding="16dp"
         android:lineSpacingMultiplier="1.2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="monospace"
+       	android:textSize="30sp"
+        android:textStyle="bold" 
+        android:textColor="#eeeeee"
         android:text="" />	
 </RelativeLayout>
