--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -35,12 +35,13 @@
 				android:id="@+id/SelectBtName"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_margin="20dp"
+				android:layout_marginTop="35dp"
+				android:layout_marginLeft="20dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentLeft="true" 
 				android:text="" 
 				android:typeface="monospace"
-				android:textSize="25sp"
+				android:textSize="22sp"
         		android:textStyle="bold" />
 			<ImageButton
 				android:id="@+id/MainPower"
