--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -4,15 +4,23 @@
    	android:layout_width="match_parent" 
 	android:layout_height="match_parent" 
 	android:padding="3dp">
-    <TextView style="?android:textAppearanceMedium"
+    <TextView 
     	android:id="@+id/fragment_text"
         android:padding="16dp"
-        android:lineSpacingMultiplier="1.2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:typeface="monospace"
        	android:textSize="30sp"
         android:textStyle="bold" 
         android:textColor="#eeeeee"
-        android:text="" />	
+        android:text="" />
+    <TextView
+    	android:id="@+id/frequency"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:layout_centerHorizontal="true"
+    	android:layout_centerVertical="true"
+    	android:text="98.6"
+    	android:textColor="#00ff00"
+    	android:textSize="50sp" />
 </RelativeLayout>
