--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -73,8 +73,7 @@
 		   			android:id="@+id/pager"
 		   			android:layout_width="match_parent"
 		   			android:layout_height="match_parent" 
-		   			android:layout_margin="3dp" 
-		   			android:background="@drawable/grill" />
+		   			android:layout_margin="3dp" />
 			</RelativeLayout>    
 		</RelativeLayout>        
 	</RelativeLayout>        
