--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -20,7 +20,16 @@
     	android:layout_height="wrap_content"
     	android:layout_centerHorizontal="true"
     	android:layout_centerVertical="true"
-    	android:text="98.6"
+    	android:text=""
     	android:textColor="#00ff00"
     	android:textSize="50sp" />
+	<TextView
+    	android:id="@+id/RDS"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:layout_centerHorizontal="true"
+        android:layout_below="@id/frequency"
+    	android:text=""
+        android:textColor="#00ff00"
+        android:textSize="30sp" />    
 </RelativeLayout>
