--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -31,32 +31,34 @@
         android:layout_above="@id/RDS"
     	android:text=""
     	android:textColor="#00ff00"
-    	android:textSize="50sp" />        
-	<es.carlosrolindez.kbfinder.FmPicker
-		android:id="@+id/megaherzs"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-    	android:layout_centerHorizontal="true"
+    	android:textSize="50sp" />   
+	<ImageButton
+		android:id="@+id/dial_FM"
+		android:layout_width="64dp"
+		android:layout_height="64dp"
+		android:layout_centerHorizontal="true"
         android:layout_below="@id/RDS"
-		android:dividerPadding="2dp"
-		android:showDividers="none"
-		android:splitMotionEvents="true" />
-	<TextView
-    	android:id="@+id/point"
-    	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
+		android:layout_marginTop="10dp"	
+		android:layout_marginBottom="10dp"		
+		android:background="@drawable/play_pause_selector"  />		
+   	<ImageButton
+        android:id="@+id/scan_down_FM"
+		android:layout_toLeftOf="@id/dial_FM"
         android:layout_below="@id/RDS"
-		android:layout_toRightOf="@id/megaherzs"
-    	android:text="."
-        android:textColor="#00ff00"
-        android:textSize="30sp" />  
-	<es.carlosrolindez.kbfinder.FmPicker
-		android:id="@+id/kiloherzs"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-        android:layout_below="@id/RDS"
-		android:layout_toRightOf="@id/point"
-		android:dividerPadding="2dp"
-		android:showDividers="none"
-		android:splitMotionEvents="true" />
+		android:layout_marginTop="10dp"	
+        android:layout_width="64dp" 
+        android:layout_height="64dp" 
+		android:layout_marginBottom="10dp"		
+        android:background="@drawable/previous_selector" /> 
+	<ImageButton
+		android:id="@+id/scan_up_FM"
+		android:layout_width="64dp"
+		android:layout_height="64dp"
+		android:layout_toRightOf="@id/dial_FM"
+        android:layout_below="@id/RDS"	
+		android:layout_marginTop="10dp"	
+		android:layout_marginBottom="10dp"		
+		android:background="@drawable/next_selector" />
+    	
+    
 </RelativeLayout>
