--- a/KBFinder/res/values/styles.xml
+++ b/KBFinder/res/values/styles.xml
@@ -12,4 +12,10 @@
 	<!-- Application theme. -->
 	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
 	</style>
+	
+	<style name="CustomDialog" parent="@android:style/Theme.Holo.Light.Dialog.NoActionBar">
+		
+	</style>
+
 </resources>
+
