--- a/KBFinder/res/layout/bt_fragment.xml
+++ b/KBFinder/res/layout/bt_fragment.xml
@@ -15,13 +15,17 @@
         android:textColor="#eeeeee"
         android:text="" />	
 	<TextView
-       android:id="@+id/song_name"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_centerVertical="true"
-       android:layout_centerHorizontal="true"
-       android:textColor="#00ff00"
-       android:textSize="30sp" />        
+       	android:id="@+id/song_name"
+       	android:layout_width="wrap_content"
+       	android:layout_height="wrap_content"
+       	android:layout_centerVertical="true"
+       	android:layout_centerHorizontal="true"
+		android:singleLine="true"
+    	android:ellipsize="marquee"
+    	android:marqueeRepeatLimit="marquee_forever"
+    	android:scrollHorizontally="true"       
+       	android:textColor="#00ff00"
+       	android:textSize="30sp" />        
 	<ImageButton
 		android:id="@+id/play_pause_BT"
 		android:layout_width="64dp"
