Fm dial working

--- a/KBFinder/res/layout/fm_dial.xml
+++ b/KBFinder/res/layout/fm_dial.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="250dp"
+	android:layout_width="200dp"
 	android:layout_height="wrap_content" 
-	android:paddingBottom="30dp"
-	android:paddingLeft="30dp"
-	android:paddingRight="30dp"	
-	android:background="#555555" >				
-    <TextView
-    	android:id="@+id/head_text"
-    	android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:layout_centerHorizontal="true"
+	android:paddingBottom="30dp" >
+	<TextView
+		android:id="@+id/head_text"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentTop="true"
+		android:background="#555555"
+		android:gravity="center_horizontal"
 		android:padding="20dp"
-    	android:text="@string/fm_dial"
-    	android:textColor="#00ff00"
-    	android:textSize="26sp"
-    	android:textStyle="bold"
-    	android:typeface="sans" 
-		android:background="#555555"/>	
+		android:text="@string/fm_dial"
+		android:textColor="#00ff00"
+		android:textSize="26sp"
+		android:textStyle="bold"
+		android:typeface="sans" />
 	<es.carlosrolindez.kbfinder.FmPicker
 		android:id="@+id/megaherzs"
 		android:layout_width="100dp"
 		android:layout_height="wrap_content"
 		android:layout_alignParentLeft="true"
 		android:layout_below="@id/head_text"
+		android:layout_marginLeft="16dp"
 		android:dividerPadding="20dp"
 		android:showDividers="middle"
 		android:splitMotionEvents="true" />
@@ -34,7 +34,9 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentRight="true"
 		android:layout_alignTop="@+id/megaherzs"
+		android:layout_marginRight="16dp"
 		android:dividerPadding="20dp"
 		android:showDividers="none"
 		android:splitMotionEvents="true" />
+
 </RelativeLayout>
