--- a/KBFinder/res/layout/fm_dial.xml
+++ b/KBFinder/res/layout/fm_dial.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="200dp"
-	android:layout_height="wrap_content" 
+	android:layout_width="250dp"
+	android:layout_height="wrap_content"
+	android:paddingRight="25dp"
+	android:paddingLeft="25dp"
 	android:paddingBottom="30dp" >
 	<TextView
 		android:id="@+id/head_text"
