--- a/KBFinder/res/values/styles.xml
+++ b/KBFinder/res/values/styles.xml
@@ -13,9 +13,8 @@
 	<style name="AppTheme" parent="AppBaseTheme">		<!-- All customizations that are NOT specific to a particular API-level can go here. -->
 	</style>
 	
-	<style name="CustomDialog" parent="@android:style/Theme.Holo.Light.Dialog.NoActionBar">
-		
-	</style>
+	<style name="CustomDialog" parent="@android:style/Theme.Holo.Light.Dialog.NoActionBar"/>	
+
 
 </resources>
 
