--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -59,6 +59,18 @@
 		android:layout_marginTop="10dp"	
 		android:layout_marginBottom="10dp"		
 		android:background="@drawable/next_selector" />
-    	
-    
+	<ImageButton
+		android:id="@+id/imageButton1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentRight="true"
+		android:layout_alignTop="@+id/fragment_text"
+		android:src="@drawable/mono" />
+	<ImageButton
+		android:id="@+id/imageButton2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_above="@+id/RDS"
+		android:layout_alignLeft="@+id/scan_up_FM"
+		android:src="@drawable/favorite" />
 </RelativeLayout>
