--- a/KBFinder/res/menu/main.xml
+++ b/KBFinder/res/menu/main.xml
@@ -7,9 +7,9 @@
         android:showAsAction="always"
         android:title=""/>
 	<item
-		android:id="@+id/action_settings"
+		android:id="@+id/clear_memory"
 		android:orderInCategory="100"
 		android:showAsAction="never"
-		android:title="@string/action_settings"/>
+		android:title="@string/clear_memories"/>
 	
 </menu>
