--- a/KBFinder/res/layout/activity_selectbt.xml
+++ b/KBFinder/res/layout/activity_selectbt.xml
@@ -35,7 +35,7 @@
 				android:id="@+id/SelectBtName"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_marginTop="35dp"
+				android:layout_marginTop="20dp"
 				android:layout_marginLeft="20dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentLeft="true" 
@@ -45,9 +45,10 @@
         		android:textStyle="bold" />
 			<ImageButton
 				android:id="@+id/MainPower"
-				android:layout_width="64dp"
-				android:layout_height="64dp"
-				android:layout_margin="15dp"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
+				android:layout_margin="10dp"
+				android:layout_marginRight="20dp"
 				android:layout_alignParentTop="true"
 				android:layout_alignParentRight="true"
 				android:background="@drawable/power_on_selector" />
@@ -64,7 +65,7 @@
 				android:id="@+id/WindowLayout"
 	       	 	android:layout_width="match_parent"
 	        	android:layout_height="match_parent"
-	        	android:layout_margin="20dp"
+	        	android:layout_margin="10dp"
 	        	android:layout_above="@+id/volumeControl"
 				android:layout_below="@+id/MainPower"
 	        	android:background="@drawable/windows" >        	
