--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -76,4 +76,13 @@
 		android:layout_alignTop="@+id/frequency"
 		android:layout_toRightOf="@+id/frequency"
 		android:background="@drawable/favorite" />
+	<it.sephiroth.android.wheel.view.Wheel
+        android:id="@+id/wheel"
+        xmlns:sephiroth="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+		android:layout_marginTop="10dp"
+		android:layout_below="@id/scan_up_FM"
+        sephiroth:numRotations="21"
+        sephiroth:ticks="10" />	
 </RelativeLayout>
