--- a/KBFinder/res/layout/fm_fragment.xml
+++ b/KBFinder/res/layout/fm_fragment.xml
@@ -81,8 +81,8 @@
         xmlns:sephiroth="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-		android:layout_marginTop="10dp"
+		android:layout_margin="10dp"
 		android:layout_below="@id/scan_up_FM"
-        sephiroth:numRotations="21"
-        sephiroth:ticks="10" />	
+        sephiroth:numRotations="2"
+        sephiroth:ticks="51" />	
 </RelativeLayout>
